# flexium

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/skills/: save-session.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: ARCHITECTURE.md  api.md  examples.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/features/: framework-compatibility.md  gpu-error-recovery.md  graceful-degradation.md  lightning-integration.md  pause-resume.md  zero-residue-migration.md
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
examples/: README.md
examples/diffusion/: ddpm_train.py
examples/gan/: dcgan_train.py
examples/lightning/: mnist_lightning.py
examples/llm/: gpt_train.py
examples/simple/: gpu_filler.py  mnist_train_auto.py  oom_recovery_demo.py
examples/utils/: run_demo.sh  run_demo_2gpu.sh
examples/vision/: vit_train.py
flexium/: __init__.py  _driver.py  auto.py  config.py  timing.py
flexium/cli/: __init__.py  flexium_setup.py
flexium/gpu/: __init__.py  interface.py  mock.py  nvidia.py
flexium/lightning/: __init__.py  callback.py  utils.py
flexium/orchestrator/: __init__.py  client.py  transport.py  websocket_transport.py
flexium/proto/: __init__.py  orchestrator.proto  orchestrator_pb2.py  orchestrator_pb2_grpc.py
flexium/utils/: __init__.py  cuda_checkpoint.py  gpu_info.py  logging.py
tests/: __init__.py  conftest.py  test_auto.py  test_config.py  test_driver.py  test_orchestrator_client.py  test_timing.py  timing_utilities.py
tests/integration/: __init__.py  test_framework_compatibility.py  test_orchestrator_client.py
tests/unit/: __init__.py  test_auto.py  test_auto_with_mock_gpu.py  test_config.py  test_cuda_checkpoint.py  test_cuda_checkpoint_additional.py  test_cuda_checkpoint_install.py  test_driver.py  test_gpu_info.py  test_gpu_info_additional.py  test_gpu_interface.py  test_gpu_layer.py  test_init.py  test_lightning.py  test_logging.py  test_mock_gpu.py  test_nvidia_gpu.py  test_orchestrator_client.py  test_websocket_transport.py
