[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexium"
version = "0.2.6"
description = "Flexium.AI - Flexible Resource Allocation for GPU training with live migration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Flexium.AI"}
]
keywords = ["gpu", "pytorch", "training", "orchestration", "migration", "cuda", "flexible-resource-allocation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "python-socketio[client]>=5.0.0",
    "pynvml>=11.0.0",  # NVIDIA Management Library for GPU monitoring
    "flask>=2.0.0",    # Web dashboard
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
torch = [
    # Note: For CUDA support, install torch manually from PyTorch index:
    # pip install torch==2.1.0+cu118 torchvision==0.16.0+cu118 --index-url https://download.pytorch.org/whl/cu118
    # Or for CPU-only: pip install torch torchvision
    "torch>=1.9.0",
    "torchvision>=0.10.0",
]
# Framework integration tests (install with: pip install -e ".[test-frameworks]")
test-frameworks = [
    "pytorch-lightning>=2.0.0",
    "transformers>=4.20.0",
    "accelerate>=0.20.0",
    "timm>=0.9.0",
    "datasets>=2.0.0",  # For HuggingFace tests
]
debug = [
    "debugpy>=1.6.0",
]
all = [
    "flexium[torch,debug,dev,test-frameworks]",
]

[project.scripts]
flexium-ctl = "flexium.cli.flexium_ctl:main"
flexium-setup = "flexium.cli.flexium_setup:main"

[project.urls]
Homepage = "https://github.com/flexiumai/flexium"
Documentation = "https://github.com/flexiumai/flexium#readme"
Repository = "https://github.com/flexiumai/flexium"

[tool.setuptools.packages.find]
where = ["."]
include = ["flexium*"]

[tool.setuptools.package-data]
flexium = ["dashboard/templates/*.html", "dashboard/static/*.png", "bin/*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "socketio",
    "socketio.*",
    "torch",
    "torch.*",
    "numpy",
    "debugpy",
    "pynvml",
    "pytorch_lightning",
    "pytorch_lightning.*",
    "transformers",
    "transformers.*",
    "accelerate",
    "accelerate.*",
    "timm",
    "timm.*",
    "datasets",
    "datasets.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F401",   # unused imports - many are for re-export or TYPE_CHECKING
    "F811",   # redefinition - often intentional in tests
    "F841",   # unused variable - sometimes needed for unpacking
]
# Note: Using minimal ruleset to avoid churn on existing code
# - Removed "I" (isort) - would require reformatting all imports
# - Removed "UP" (pyupgrade) - suggests Python 3.10+ syntax incompatible with py38
# - Removed "B" (bugbear) - too opinionated for existing codebase
# - Removed "C4" (comprehensions) - not critical

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["flexium"]
omit = [
    "flexium/cli/*",
    "flexium/dashboard/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.tbump]
# tbump configuration for version bumping
# Usage: tbump 0.2.0a3

[tool.tbump.version]
current = "0.2.6"

# Version regex pattern - supports:
# - release: 0.2.0
# - alpha: 0.2.0a3
# - beta: 0.2.0b1
# - rc: 0.2.0rc1
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  ((?P<pre>[abc]|rc)(?P<prenum>\d+))?
'''

[tool.tbump.git]
message_template = "Bump version to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "flexium/__init__.py"
search = '__version__ = "{current_version}"'
